# SIMD-Workshop

./: .gitignore  CMakeLists.txt  README.md  install.bat
src/examples/example_1/: CMakeLists.txt  main.cpp
src/examples/example_2/: main.cpp
src/examples/example_3/: main.cpp
src/examples/example_4/: CMakeLists.txt  main.cpp
